# robot

./: LICENSE  README.md  package.xml  setup.py
config/: robot_modes.yaml  rs_cam.yaml  rs_cam_field.yaml  rs_cam_overhead.yaml  rs_cam_wrist.yaml
launch/: robot.launch.py
robot/: constants.py  keyboard_interface.py  real_env.py  robot_utils.py
robot/detr/: main.py
robot/humanplus/: cmds.md  constants.py  model_util.py
robot/mobile_policy/: config.py  data.ipynb  model.py  multi_dataloader.py  multi_model.py  multi_train.py  plot_loss.py  test.py  train.py
robot/policy3/: config.py  config.yaml  dataloader.py  model.py  train.py
robot/simplest_policy/: config.py  config.yaml  inference.py  model.py  policy_test.ipynb  train.py  world_model.py
robot/vector-quantize-pytorch/: pyproject.toml
robot/vq_bet_official/: requirements.txt
robot/world_model/: config.py  config.yaml  dataloader.py  model.py  test.ipynb  train.py
rviz/: robot.rviz
scripts/: act_imagine_cnn.py  act_imagine_hit.py  act_imagine_vqbet.py  cal_teleop.py  cnn_act_imagine.py  cnn_robot_inference copy.py  cnn_robot_inference.py  cnn_wm_openloop.py  dual_side_teleop.py  experiment.py  hit_act_imagine.py  hit_robot_inference.py  multi_experiment.py  record_episodes.py  recorder_test.py  robot_data_collect copy.py  robot_data_collect.py  robot_teleop.py  robot_teleop_copy.py  rs_cameras.py  teleop_robot.py  vqbet_robot_inference.py
scripts/HIT/: cmds.md  constants.py  dataloader copy 2.py  dataloader copy.py  imitate_episodes_h1_train.py  inference.py  model_util.py  policy.py  train.py  (+1 more)
(+146 files in other folders)
